plugins {
	id 'java'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
	}
	mavenCentral()
}

def runeLiteVersion = '1.8.18.5'

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.4'
	annotationProcessor 'org.projectlombok:lombok:1.18.4'

	testImplementation 'junit:junit:4.12'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}

group = 'koivel-runelite-plugin'
version = '1.0.0'
sourceCompatibility = '1.8'
targetCompatibility = "1.8"

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

jar {
	manifest {
		attributes(	"Plugin-Version": "1.0.0",
				"Plugin-Id": "koivel-plugin",
				"Plugin-Provider": "Koivel",
				"Plugin-Description": "Koivel plugin",
				"Plugin-License": "3-Clause BSD License"
		)
	}
}

